# nppfavorites

./: .gitignore  CMakeLists.txt
src/: nppfavorites.mm
